# laboratoryWork_5

./: CMakeLists.txt  head.h  main.c  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
