# CMakeList.txt: проект CMake для laboratoryWork_5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratoryWork_5 "head.h" "main.c" "task1.c" "task2.c" "task3.c" "task4.c" "task5.c" "task6.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
